# packages/api/openapi.yml
@@ -15,22 +15,22 @@ tags:
 paths:
   "/dons/{id}":
     get:
-      tags: 
+      tags:
         - don
       description: 特定のidの丼の詳細を取得
       parameters:
         - name: id
           in: path
           required: true
-          schema: 
+          schema:
             type: integer
             format: int32
       responses:
-        '200': 
+        '200':
           description: 丼の詳細を返す
           content:
             application/json:
-              schema: 
+              schema:
                 $ref: "#/components/schemas/Don"
     put:
       tags:
@@ -40,7 +40,7 @@ paths:
         - name: id
           in: path
           required: true
-          schema: 
+          schema:
             type: integer
             format: int32
       requestBody:
@@ -50,32 +50,32 @@ paths:
             schema:
               type: object
               properties:
-                status: 
+                status:
                   type: integer
                   format: int32
               required:
                 - donId
                   afterStatus
       responses:
-        '201': 
+        '201':
           description: 調理状態の変更に成功
           content:
             application/json:
-              schema: 
+              schema:
                 $ref: "#/components/schemas/Don"
   "/dons/price":
     post:
-      tags: 
+      tags:
         - don
       description: 特定の条件の場合の丼の値段を取得
       requestBody:
         required: true
         content:
           application/json:
-            schema: 
+            schema:
               type: object
               properties:
-                size: 
+                size:
                   type: integer
                   format: int32
                 toppings:
@@ -83,10 +83,10 @@ paths:
                   items:
                     type: object
                     properties:
-                      id: 
+                      id:
                         type: integer
                         format: int32
-                      amount: 
+                      amount:
                         type: integer
                         format: int32
                     required:
@@ -98,26 +98,26 @@ paths:
                 - size
                 - snsFollowed
       responses:
-        '200': 
+        '200':
           description: 価格を返す
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
-                  price: 
+                  price:
                     type: integer
                     format: int32
   "/dons/status/":
-    get: 
+    get:
       tags:
         - don
       description: 特定の状態の丼を取得する
       parameters:
         - name: status
-          in: path
+          in: query
           required: true
-          schema: 
+          schema:
             type: integer
             format: int32
             description: 調理状態
@@ -134,7 +134,7 @@ paths:
           description: 注文の一覧を正常に取得
           content:
             application/json:
-              schema: 
+              schema:
                 type: array
                 items:
                   $ref: "#/components/schemas/Order"
@@ -147,24 +147,24 @@ paths:
             application/json:
               schema:
                 type: array
-                items: 
+                items:
                   $ref: '#/components/schemas/Option'
   "/order":
     post:
-      tags: 
-        - order 
+      tags:
+        - order
       summary: 新規注文を追加
       description: 新規注文を含むリクエストに対して，DBにその内容を保存し，作成した内容をレスポンスする
       requestBody:
         required: true
         content:
           application/json:
-            schema: 
+            schema:
               type: object
               properties:
                 call_num:
                   type: integer
-                dons: 
+                dons:
                   type: array
                   items:
                     type: object
@@ -184,19 +184,19 @@ paths:
                       abura:
                         type: integer
                         format: int32
-                      snsFollowed: 
+                      snsFollowed:
                         type: boolean
                       toppings:
                         type: array
                         items:
                           type: object
                           properties:
-                            id: 
+                            id:
                               type: integer
                               format: int32
                             label:
                               type: string
-                            amount: 
+                            amount:
                               type: integer
                               format: int32
                           required:
@@ -217,31 +217,31 @@ paths:
           description: 注文の追加が成功
           content:
             application/json:
-              schema: 
+              schema:
                 $ref: "#/components/schemas/Order"
   "/toppings":
     get:
-      tags: 
+      tags:
         - topping
       responses:
         '200':
           description: すべてのトッピングを返す
           content:
             application/json:
-              schema: 
+              schema:
                 type: array
                 items:
                   $ref: "#/components/schemas/Topping"
   "/toppings/available":
     get:
-      tags: 
+      tags:
         - topping
       responses:
         '200':
           description: すべてのトッピングを返す
           content:
             application/json:
-              schema: 
+              schema:
                 type: array
                 items:
                   $ref: "#/components/schemas/Topping"
@@ -267,19 +267,19 @@ components:
         abura:
           type: integer
           format: int32
-        snsFollowed: 
+        snsFollowed:
           type: boolean
         toppings:
           type: array
           items:
             type: object
             properties:
-              id: 
+              id:
                 type: integer
                 format: int32
               label:
                 type: string
-              amount: 
+              amount:
                 type: integer
                 format: int32
             required:
@@ -293,19 +293,19 @@ components:
         - ninniku
         - karame
         - abura
-    Error: 
+    Error:
       type: object
-      properties: 
+      properties:
         title:
           type: string
           description: エラーを簡潔に表現したコード
-        type: 
+        type:
           type: string
           description: エラーの詳細ドキュメントを指すURL
         status:
           type: number
           description: HTTPステータスコード
-        detail: 
+        detail:
           type: string
           description: 開発者向けの詳細文
       required:
@@ -316,9 +316,9 @@ components:
     Option:
       type: object
       properties:
-        id: 
+        id:
           type: integer
-        label: 
+        label:
           type: string
     Order:
       type: object
@@ -342,7 +342,7 @@ components:
     Topping:
       type: object
       properties:
-        id: 
+        id:
           type: integer
           format: int32
         label:
@@ -350,5 +350,5 @@ components:
         price:
           type: integer
           format: int32
-    
+
 
